@@ -1,7 +1,9 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
 2012-02-04 patrick     Replaced the Sonix DLL import/export macros with
-                       SNX_API.
+                       SNX_API. Audio implementation plug-ins can use
+                       SNX_PLUGIN_EXPORT (which no longer takes a parameter)
+                       or SNX_PLUGIN_API.
 2011-03-19 patrick     Added support for Boost.Filesystem v3.
                        Submitted by Doug McCorkle.
                        NEW VERSION: 1.5.1
